eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Call_Centre_Coaching_Inbound__c.object
<CustomObject>
    <fields>
        <fullName>Sharia_a_Compliance__c</fullName>
        <description>Did the consultant clearly outline the key features and benefits of Ibb product discussed and our USP of &apos;Sharia Compliant banking?  Was this accurate and confidently presented</description>
        <inlineHelpText>Did the consultant clearly outline the key features and benefits of Ibb product discussed and our USP of &apos;Sharia Compliant banking?  Was this accurate and confidently presented</inlineHelpText>
        <label>Sharia&apos;a Compliance</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Signpost_Next_Steps__c</fullName>
        <description>Did the consultant signpost the next step of the call so the customer was clear with and furthe action who and when they would be responded to!</description>
        <inlineHelpText>Did the consultant signpost the next step of the call so the customer was clear with and furthe action who and when they would be responded to!</inlineHelpText>
        <label>Signpost Next Steps</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Soft_Skills_Service_Excellence_Points__c</fullName>
        <formula>IF(OR(TEXT(  Empathy__c  )=&quot;Yes&quot;, TEXT( Empathy__c   )=&quot;N/A&quot;), 5, 0) +
IF(OR(TEXT(  friendly_helpful__c  )=&quot;Yes&quot;, TEXT(friendly_helpful__c    )=&quot;N/A&quot;), 5, 0) +
IF(OR(TEXT( Courteous_professional__c   )=&quot;Yes&quot;, TEXT( Courteous_professional__c    )=&quot;N/A&quot;), 5, 0) +
IF(OR(TEXT(  Tone_Pace_Clarity__c  )=&quot;Yes&quot;, TEXT(Tone_Pace_Clarity__c    )=&quot;N/A&quot;), 2.5, 0) +
IF(OR(TEXT( Customer_ownership__c   )=&quot;Yes&quot;, TEXT( Customer_ownership__c )=&quot;N/A&quot;), 2.5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Soft Skills Service Excellence Points</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Call_Close__c</fullName>
        <description>Did the consultant during the call close give their name and end the call with the brand? e.g. You&apos;ve been speaking to Mohammed today and thank you for calling the Islamic Bank of Britain</description>
        <inlineHelpText>Did the consultant during the call close give their name and end the call with the brand? e.g. You&apos;ve been speaking to Mohammed today and thank you for calling the Islamic Bank of Britain</inlineHelpText>
        <label>Standard Call Close</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technical_Knowledge__c</fullName>
        <description>In providing a response to the customer would the customer have felt impressed and confident with the knowledge of the consultant</description>
        <inlineHelpText>In providing a response to the customer would the customer have felt impressed and confident with the knowledge of the consultant</inlineHelpText>
        <label>Technical Knowledge</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tone_Pace_Clarity__c</fullName>
        <description>Did the consultant confidently and appropriately ask for the business using natural conversational selling techniques?</description>
        <inlineHelpText>Did the consultant confidently and appropriately ask for the business using natural conversational selling techniques?</inlineHelpText>
        <label>Tone, Pace &amp; Clarity</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Points__c</fullName>
        <formula>Open_Call_Verification_Points__c + Soft_Skills_Service_Excellence_Points__c + Process_Procedural_Knowledge_Points__c + Opportunity_Spotting_and_Close_Points__c + Quality_and_Behaviours_Points__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Points</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Type_other__c</fullName>
        <inlineHelpText>Please enter the main purpose of the call if other selected on call type?</inlineHelpText>
        <label>Transaction Type (other)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>friendly_helpful__c</fullName>
        <description>Was the consultants tone, pace and clarity warm and friendly towards the customer.  Did they use the customers name appropriately throughout the call, build customer rapport, match and mirror custoemr pace and tone (if appropriate).</description>
        <inlineHelpText>Was the consultants tone, pace and clarity warm and friendly towards the customer.  Did they use the customers name appropriately throughout the call, build customer rapport, match and mirror custoemr pace and tone (if appropriate).</inlineHelpText>
        <label>Friendly &amp; helpful</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Call Centre Coaching Inbound</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CCInbound-{000}</displayFormat>
        <label>Call Centre Coaching Inbound</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Centre Coaching Inbound</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>